<resources>
    <string name="app_name">TruckMixStatic</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //Select truck
    <string name="SelectTruck_truckID">Select truck registration number: </string>
    <string name="SelectTruck_truckID_Edit">Truck n°</string>
    <string name="SelectTruck_targetSlump_Edit">slump in mm</string>
    <string name="SelectTruck_targetSlump">Enter target slump in mm</string>
    <string name="SelectTruck_buttonLabel">Start slump calculation</string>
    <string name="menu_settings">  Settings  </string>
    <string name="SelectTruck_loadVolume">Enter The load volume in m3</string>
    <string name="SelectTruck_loadVolume_edit">Load volume in m3</string>

            //menu
    <string name="menu_1">  Truck settings  </string>
    <string name="menu_2">  Calculator settings  </string>
    //slump calculation
    <string name="title_activity_slump_calculation">SlumpCalculationActivity</string>
    <string name="SlumpCalculation_truckID">Truck ID :</string>
    <string name="SlumpCalculation_targetSlump">Target Slump :</string>
    <string name="SlumpCalculation_measuredSlump">Measured slump (in mm) :</string>
    <string name="SlumpCalculation_endCalculation">End calculation</string>
    <string name="SlumpCalculation_loadVolume">Load volume :</string>
    //calculator parameters
    <string name="title_activity_parameters_calculator">ParametersCalculatorActivity</string>
    <string name="ParameterCalculator_MACaddr">Calculator adapter MAC address :</string>
            //menu
    <string name="calculatorParam1">  Save  </string>
    //Truck list parameters
    <string name="title_activity_parameters_truck">ParametersTruckActivity</string>
    <string name="title_activity_parameters_truck_list">ParametersTruckListActivity</string>
    <string name="ParameterTruckList">Select the truck to modify</string>
            //menu
    <string name="TruckListParam1">  New  </string>
    <string name="TruckListParam2">  Edit  </string>
    <string name="TruckListParam3">  Delete  </string>
    Truck details parameters
    <string name="title_activity_parameters_truck_details">ParametersTruckDetailsActivity</string>
            //menu
    <string name="TruckDetailsParam1">  Save  </string>
    <string name="TruckDetailsParam2">  Reset  </string>
    <string name="noTruckAvailable">No truck available</string>
    <string name="noTruckAvailableWarning">No truck available, please create new truck before launching slump calculation.</string>
    <string name="noSlumpEntered">--</string>
    <string name="ParametersTruckList_deleteTruck">Deleting truck</string>
    <string name="TruckDetailsRegistrationNumber">Truck registration number</string>
    <string name="waterAdditionDialogTitle">Water addition</string>
    <string name="waterAdditionDialogMessage">System water addition proposal is :</string>
    <string name="exitTitle">Exit application</string>
    <string name="exitMessage">You are about to exit the application during a slump calculation. Do you really want to leave ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="SlumpCalculation_sensor">Sensors connected:</string>
    <string name="CalculatorParametersMACSaved">MAC address saved</string>
    <string name="CalculatorParametersMACIncorrect">MAC address incorrect</string>
    <string name="waitingConnectionDialogTitle">Waiting for truck connection</string>
    <string name="waitingConnectionDialogMessage">Synchronisation in progress. Please wait to launch the slump calculation this could take a few minutes</string>
    <string name="cancel">CANCEL</string>
    <string name="SpeedSensorDialogTitle">Speed sensor warning</string>
    <string name="SpeedSensorDialodTooFast">Warning the drum rotation is too fast for slump calculation</string>
    <string name="SpeedSensorDialodTooSlow">Warning the drum rotation is too slow for slump calculation</string>
    <string name="AdminDialogTitle">Admin password requested</string>
    <string name="adminDialogMessage">Enter admin password :</string>
    <string name="adminDialogErrorMessage">Wrong password</string>
    <string name="ParametersTruckDetail_TruckSaved">The following truck has been saved : </string>
    <string name="ParametersTruckDetail_SaveError">An error occured while saving the truck </string>
    <string name="ParametersTruckDetail_TruckAlready_exist">This truck already exist : </string>
    <string name="ParametersTruckDetail_FieldError">At least one of the field has incorrect value </string>
    <string name="ParametersTruckDetail_DataBaseIssue">Something went wrong when recording in database</string>
    <string name="ParametersTruckList_deleteTruckKO">An error occured during deletion. Truck is not deleted : </string>
    <string name="ParametersTruckDetail_RegistrationCannotBeNull">Truck registration cannot be null </string>
    <string name="TruckListParam4">PURGE</string>
    <string name="purgeTitle">Purge database confirmation</string>
    <string name="purgeMessage">Purge database will wipe every trucks recorded. Are you sure to purge the database ?</string>
    <string name="ParameterCalculator_password">Current administrator password</string>
    <string name="CalculatorParametersPasswordaved">new password saved</string>


</resources>
