<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/SelectTruck_truckID"
            />
        <EditText
            android:id="@+id/fieldTruckID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:hint="@string/SelectTruck_truckID_Edit"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/SelectTruck_targetSlump"
            />
        <EditText
            android:id="@+id/fieldTagetSlump"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:hint="@string/SelectTruck_targetSlump_Edit"
            android:inputType="number"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="20" >
        <Button
            android:id="@+id/buttonStartCalculation"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/SelectTruck_buttonLabel"
            android:textSize="50sp"/>
    </LinearLayout>
</LinearLayout>
