<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.lafarge.truckmix.tmstatic.SlumpCalculationActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/SlumpCalculation_truckID"
            android:layout_gravity="start"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/slumpCalculationTuckID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="AZERTY123"
            android:layout_gravity="end"
            android:layout_weight="10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/SlumpCalculation_targetSlump"
            android:layout_gravity="start"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/slumpCalculationTargetSlump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="150mm"
            android:layout_gravity="end"
            android:layout_weight="10"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_weight="20">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:text="@string/SlumpCalculation_measuredSlump"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/slumpCalculationMeasuredSlump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="200sp"
                android:text="- - -"
                android:layout_gravity="center"/>

        </LinearLayout>
        <Button
            android:id="@+id/slumpCalculationEndCalculation"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="50sp"
            android:text="@string/SlumpCalculation_endCalculation"
            android:layout_gravity="end"
            android:layout_weight="2"/>
    </LinearLayout>

</LinearLayout>
